--- a/src/components/Current-weather/current-weather.scss
+++ b/src/components/Current-weather/current-weather.scss
@@ -64,6 +64,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 40%;
   padding-right: 45px;
   &::after {
     position: absolute;
@@ -98,7 +99,7 @@
   &__feels-like {
     font-family: 'Roboto';
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 16px;
     letter-spacing: 0.25px;
     color: #fff;
@@ -131,6 +132,8 @@
 .today-hourly-weather {
   display: flex;
   gap: 10px;
+  width: 60%;
+  justify-content: space-evenly;
   &__card-wrapper {
     display: flex;
     flex-direction: column;
@@ -170,7 +173,7 @@
   &__feel {
     font-family: 'Roboto';
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 14px;
     line-height: 114%;
     color: rgba(255, 255, 255, 0.7);
@@ -241,7 +244,7 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      opacity: 0.7;
+      opacity: 0.8;
       margin-right: 5px;
     }
     &::after {
@@ -249,13 +252,14 @@
       font-size: 60%;
       font-weight: 300;
       margin-left: 5px;
+      opacity: 0.8;
     }
   }
 }
 
-.probability {
+.clouds {
   &::before {
-    background-image: url(./ico/drops.svg);
+    background-image: url(./ico/cloud-up.svg);
   }
   &::after {
     content: '%';
@@ -273,13 +277,16 @@
   &::before {
     background-image: url(./ico/thermometer-5.svg);
   }
+  &::after {
+    content: 'hPa';
+  }
 }
-.uv-index {
+.visibility {
   &::before {
-    content: 'UV';
-    height: fit-content;
-    filter: invert(0);
-    font-weight: 400;
+    background-image: url(./ico/fog-1.svg);
+  }
+  &::after {
+    content: 'м';
   }
 }
 .humidity {
@@ -288,13 +295,5 @@
   }
   &::after {
     content: '%';
-  }
-}
-.precipitation {
-  &::before {
-    background-image: url(./ico/drizzle.svg);
-  }
-  &::after {
-    content: 'мм';
   }
 }
