--- a/src/components/TodayTemperature/todayTemperature.scss
+++ b/src/components/TodayTemperature/todayTemperature.scss
@@ -18,6 +18,7 @@
   &__wrapper {
     display: flex;
     margin: auto 0;
+    gap: 10px;
   }
 
   &__temp {
@@ -31,6 +32,10 @@
 
   &__icon {
     max-width: 100px;
+    svg {
+      width: 80px;
+      height: 80px;
+    }
   }
   &__feels-like-wrapper {
     display: flex;
