--- a/src/components/tomorrov/tomorrowWeather.scss
+++ b/src/components/tomorrov/tomorrowWeather.scss
@@ -1,87 +1,338 @@
 .tomorrow-temperature {
-  &__astro-temp-wrapper {
+  max-width: 784px;
+  min-height: 384px;
+  padding: 20px;
+  background: #ffffff;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  margin: 30px auto;
+  &__wrapper-main {
+    display: flex;
+    justify-content: space-between;
   }
-
-  &__wrapper {
-  }
-
-  &__temp {
-  }
-
-  &__icon {
-  }
-
-  &__feels-like {
-  }
-
-  &__description {
+  &__current-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
   }
 }
 
 .tomorrow-location {
   &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 6px;
+    margin-bottom: 10px;
   }
 
   &__title {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    letter-spacing: 0.18px;
+    color: #263238;
   }
 
   &__city-local-time {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    letter-spacing: 0.25px;
+    color: #34515ecc;
+    opacity: 0.7;
+  }
+}
+
+.tomorrow-temperature-day {
+  &__astro-temp-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  &__current-temp {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 4px;
+  }
+
+  &__wrapper-temp-ico {
+    display: flex;
+    margin: auto 0;
+    gap: 10px;
+  }
+
+  &__temp {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 72px;
+    line-height: 100%;
+    color: #263238;
+  }
+
+  &__icon {
+    max-width: 100px;
+    svg {
+      width: 80px;
+      height: 80px;
+    }
+  }
+
+  &__feels-like {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: 0.25px;
+    color: #263238;
+    &::before {
+      content: 'Feels Like';
+      opacity: 0.7;
+      margin-right: 5px;
+      color: #34515ecc;
+    }
+    &::after {
+      content: '°C';
+      opacity: 0.7;
+      margin-left: 5px;
+      color: #34515ecc;
+    }
+  }
+
+  &__description {
+    color: #263238;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.15px;
+    line-height: 20px;
   }
 }
 
 .astro {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
   &__wrapper {
+    display: flex;
+    gap: 20px;
   }
 
   &__wrapper-card {
-  }
-
-  &__sunrise {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 20px;
+    gap: 6px;
+    padding-left: 40px;
+    &::before {
+      position: absolute;
+      content: '';
+      width: 30px;
+      height: 30px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      left: 0;
+    }
+    &:nth-child(1)::after {
+      position: absolute;
+      content: '';
+      width: 1px;
+      height: 90%;
+      right: 0;
+      background: #607d8b1f;
+    }
   }
 
   &__title {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.25px;
+    color: #34515ecc;
   }
 
   &__value {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 114%;
+    letter-spacing: 0.25px;
+    color: #263238;
   }
 
   &__sunset {
+    &::before {
+      background-image: url(./../../assets/ico/global/ico/sunset.png);
+    }
+  }
+  &__sunrise {
+    &::before {
+      background-image: url(./../../assets/ico/global/ico/sunrise.png);
+    }
   }
 
   &__day-lenth {
+    &::before {
+      background-image: url(./../../assets/ico/global/ico/sun.png);
+    }
   }
-
   &__moon {
+    &::before {
+      background-image: url(./../../assets/ico/global/ico/moon-phase.png);
+    }
   }
 }
 
-.tomorrow-hourly-weather {
+.hourly-weather {
+  display: flex;
+  gap: 10px;
+  width: 60%;
+  justify-content: space-evenly;
   &__card-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: fit-content;
+    gap: 10px;
   }
 
   &__name {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 114%;
+    letter-spacing: 0.25px;
+    color: #34515ecc;
   }
 
   &__ico {
+    width: 40px;
+    height: 40px;
+    svg {
+      width: 40px;
+      height: 40px;
+    }
   }
 
   &__temp {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 114%;
+    letter-spacing: 0.1px;
+    color: #263238;
   }
-
+  &__value-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
   &__value {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 120%;
+    letter-spacing: 0.1px;
+    color: #263238;
+    display: flex;
+    align-items: center;
+
+    &::before {
+      content: '';
+      left: 0;
+      font-size: 70%;
+      width: 16px;
+      height: 16px;
+      filter: invert(1);
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin-right: 8px;
+    }
+    &::after {
+      content: '';
+      color: #34515ecc;
+      font-size: 90%;
+      font-weight: 300;
+      margin-left: 8px;
+      opacity: 0.8;
+    }
   }
 }
 .feelslike-c {
+  line-height: unset;
+  &::before {
+    content: 'Feels Like';
+    display: flex;
+    align-items: flex-end;
+    width: 24px;
+  }
+  &::after {
+    content: '°C';
+  }
 }
 .chance-of-rain {
+  &::before {
+    background-image: url(./../../assets/ico/global/ico/drops.svg);
+  }
+  &::after {
+    content: '%';
+  }
 }
 .chance-of-snow {
+  &::before {
+    background-image: url(./../../assets/ico/global/ico/snowflake.svg);
+  }
+  &::after {
+    content: '%';
+  }
 }
 .precip-mm {
+  &::before {
+    background-image: url(./../../assets/ico/global/ico/precipitation.svg);
+  }
+  &::after {
+    content: 'mm';
+  }
 }
 .wind-kph {
+  &::before {
+    background-image: url(./../../assets/ico/global/ico/wind.svg);
+  }
+  &::after {
+    content: 'м/c';
+  }
 }
 .windchill-c {
+  &::before {
+    background-image: url(./../../assets/ico/global/ico/wind.svg);
+  }
+  &::after {
+    content: '°C';
+  }
 }
 .humidity {
+  &::before {
+    background-image: url(./../../assets/ico/global/ico/drop-percentage.svg);
+  }
+  &::after {
+    content: '%';
+  }
 }
