--- a/src/components/Search/search.scss
+++ b/src/components/Search/search.scss
@@ -1,11 +1,13 @@
 .header {
+  background: #ffffff;
+  border-bottom: 1px solid rgba(96, 125, 139, 0.12);
   &__wrapper {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    max-width: 1280px;
+    margin: 0 auto;
     height: 48px;
-    background: #ffffff;
-    border-bottom: 1px solid rgba(96, 125, 139, 0.12);
   }
   &__search {
     width: 400px;
