--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,22 @@
 @import 'null';
+html,
+body {
+  height: 100%;
+}
 
+#root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.main {
+  flex-grow: 1;
+}
 .spin {
   position: absolute;
   top: 50%;
