--- a/src/styles/null.scss
+++ b/src/styles/null.scss
@@ -58,4 +58,6 @@ body {
   font-family: 'Fira Sans', sans-serif;
   font-weight: 400;
   background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
 }
